# nestml-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
apptainer/: nestml-server.def
examples/: install-nestml-model.py  install_nestml_model.py
models/: iaf_psc_alpha2.nestml  my_neuron.nestml
nestml_server/: __init__.py  main.py
notebook/: install_nestml_model.ipynb  my_neuron.nestml_template  request_install_nestml_model.ipynb
scripts/: nestml-server
singularity/: nestml-server.def
src/: __init__.py  exceptions.py  generators.py  helpers.py  main.py  serialize.py  utils.py
src/nestml_server/: __init__.py  exceptions.py  generators.py  helpers.py  main.py  serialize.py  utils.py
