[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nestml-server"
version = "1.0"
description = "A server instance for NESTML"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
  {name = "Jochen M. Eppler"},
  {name = "Sebastian Spreizer"},
]
maintainers = [
  {name = "Sebastian Spreizer", email = "spreizer@web.de"},
]
keywords = ["spiking neuronal networks", "simulation", "NEST", "model generation", "custom model"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",

  "Topic :: Education",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
]
dependencies = [
  "flask",
  "flask-cors",
  "gunicorn",
  "nestml>=8.0",
]

[project.urls]
homepage = "https://nest-simulator.org"
repository = "https://github.com/babsey/nestml-server"
documentation = "https://nestml.readthedocs.io"

[tool.setuptools]
script-files = ["scripts/nestml-server"]

[tool.black]
line-length = 120

[tool.flake8]
# This is ignored
# see discussions around https://github.com/PyCQA/flake8/issues/234

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy --pylint --pydocstyle --cov --ignore=conda --ignore=venv --ignore=.git --ignore=__pycache__"
norecursedirs = ".git _build venv tmp*"

[tool.mypy]
exclude = ".git/, .pytest_cache/, conda/, venv/"

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D300"
